# qzone-cron

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/plugins/: auto_delete_plugin.md  auto_like_plugin.md  daily_summary_plugin.md  like_to_show_plugin.md
plugins/: auto_delete_plugin.py  auto_like_plugin.py  daily_summary_plugin.py  like_to_show_plugin.py  print_plugin.py
src/qzone_cron/: __main__.py  config.py  fetcher.py  llm.py  notifier.py  plugin_loader.py  state.py
